# EC2_INSTANCE_DESCRIPTOR

./: .gitignore  .readthedocs.yaml  Dockerfile  README.rst  pyproject.toml
app/: airtable_wrapper.py  boto3_wrapper.py  ec2_instances_descriptor.py  envs.py  iam_descriptor.py  requirements.txt  vscode-debug-requirements.txt
deployment/ec2-doc/: Chart.yaml  values.yaml
deployment/ec2-doc/templates/: _helpers.tpl  cronjob.yaml  secrets.yaml
docs/: requirements.txt
docs/source/: airtable_wrapper.rst  boto3_wrapper.rst  conf.py  ec2_instances_descriptor.rst  examples.rst  index.rst  intro.rst  modules.rst
