[tool.poetry]
name = "ec2-instances-descriptor"
version = "0.1.0"
description = "Boto3 script to automate AWS resources documentation"
authors = ["CHAVEZ RIVAS <45377464+jesse0099@users.noreply.github.com>"]
readme = "README.rst"
packages = [{include = "app/"}]

[tool.poetry.dependencies]
python = "3.9.13" 
pytz = "2022.6"
urllib3 = "1.26.12"
sphinx-rtd-theme = { version = "1.1.1", optional = true }
sphinx = { version = "5.3.0", optional = true }
boto3 = { version = "1.26.15", optional = true }
debugpy = { version = "1.6.3", optional = true }
autopep8 = { version = "2.0.0", optional = true }
multipledispatch = "0.6.0"
certifi = "^2022.12.7"


[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]
build_and_debug = ["boto3", "debugpy", "autopep8"]
all_extras = ["sphinx", "sphinx-rtd-theme", "boto3", "debugpy", "autopep8"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
